--- a/index.html
+++ b/index.html
@@ -3578,7 +3578,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.61+20260211.2';
+    const APP_VERSION = 'v0.7.62+20260211.2';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -6629,18 +6629,15 @@
 	            sortedRemoved.forEach((r) => {
 	              const tr = document.createElement('tr');
 	              const dealTd = document.createElement('td');
-	              dealTd.appendChild(movementMarkerEl(stageNumber(r.stage), stageNumber(r.stage) + 1, false) || document.createTextNode(''));
-	              // Force a red down marker for removed rows.
-	              const m = document.createElement('span');
-	              m.className = 'move-marker move-down';
-	              m.textContent = '▼';
-	              dealTd.innerHTML = '';
-	              dealTd.appendChild(m);
+	              const nowStage = currentStageMap.get(scorecardCanonicalKey(r));
+                const fromStage = r.stage || '-';
+                const toStage = nowStage || '-';
+                const marker = movementMarkerEl(stageNumber(toStage), stageNumber(fromStage), false);
+                if (marker) dealTd.appendChild(marker);
 	              dealTd.appendChild(document.createTextNode(r.deal || '-'));
 	              tr.appendChild(dealTd);
-	              const nowStage = currentStageMap.get(scorecardCanonicalKey(r));
-	              tr.appendChild(makeCell('td', r.stage || '-'));
-	              tr.appendChild(makeCell('td', nowStage || '-'));
+	              tr.appendChild(makeCell('td', fromStage));
+	              tr.appendChild(makeCell('td', toStage));
 	              tr.appendChild(makeCell('td', r.created_month || '-'));
 	              tr.appendChild(makeCell('td', r.start_date || '-'));
 	              tr.appendChild(makeCell('td', r.age_days == null ? '-' : money.format(r.age_days)));
