--- a/index.html
+++ b/index.html
@@ -3578,7 +3578,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v1';
+    const APP_VERSION = 'v1.0.1';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -6546,7 +6546,11 @@
 	          const prevStageLabel = (prevStageN != null && MATTER_STAGE_ORDER[Number(prevStageN) - 1]) ? MATTER_STAGE_ORDER[Number(prevStageN) - 1] : (isNew ? '-' : '-');
 	          const tr = document.createElement('tr');
 	          const dealTd = document.createElement('td');
-	          const marker = movementMarkerEl(currentStageN, prevStageN, isNew);
+	          // Rule: show positive movement in destination stage rows only.
+	          // Negative movement is shown in the origin-stage section below.
+	          const marker = (isNew || (currentStageN != null && prevStageN != null && currentStageN > prevStageN))
+	            ? movementMarkerEl(currentStageN, prevStageN, isNew)
+	            : null;
 	          if (marker) dealTd.appendChild(marker);
 	          dealTd.appendChild(document.createTextNode(r.deal || '-'));
 	          tr.appendChild(dealTd);
@@ -6617,9 +6621,9 @@
 		          else if (t.includes('won/lost')) prevBucket = (prevDetails.stage_7_8 || []);
 		          else if (t.includes('stage 1-6')) prevBucket = (prevDetails.stage_1_6 || []);
 
-		          const removed = [];
-		          const prevMap = new Map();
-		          prevBucket.forEach((r) => {
+	          const removed = [];
+	          const prevMap = new Map();
+	          prevBucket.forEach((r) => {
 		            const k = scorecardCanonicalKey(r);
 	            if (!prevMap.has(k)) prevMap.set(k, r);
 	          });
@@ -6627,29 +6631,31 @@
 	            if (!currSet.has(k)) removed.push(r);
 	          });
 
-	          if (removed.length) {
+	          const movedDownOnly = removed.filter((r) => {
+	            const nowStage = currentStageMap.get(scorecardCanonicalKey(r));
+	            const fromN = stageNumber(r.stage || '-');
+	            const toN = stageNumber(nowStage || '-');
+	            return fromN != null && toN != null && toN < fromN;
+	          });
+
+	          if (movedDownOnly.length) {
 	            const sep = document.createElement('tr');
 	            const td = document.createElement('td');
 	            td.colSpan = 8; // Deal, From, To, Intro Month, Start Date, Age, Deal Size, Help Needed
 	            td.className = 'popup-section';
-	            td.textContent = `Removed since previous: ${money.format(removed.length)}`;
+	            td.textContent = `Moved down from this stage since previous: ${money.format(movedDownOnly.length)}`;
 	            sep.appendChild(td);
 	            body.appendChild(sep);
-	            const sortedRemoved = removed.sort((a, b) => String(a.deal || '').localeCompare(String(b.deal || '')));
+	            const sortedRemoved = movedDownOnly.sort((a, b) => String(a.deal || '').localeCompare(String(b.deal || '')));
 	            sortedRemoved.forEach((r) => {
 	              const tr = document.createElement('tr');
 	              const dealTd = document.createElement('td');
 	              const nowStage = currentStageMap.get(scorecardCanonicalKey(r));
                 const fromStage = r.stage || '-';
                 const toStage = nowStage || '-';
-                const toN = stageNumber(toStage);
-                const fromN = stageNumber(fromStage);
-                let marker = movementMarkerEl(toN, fromN, false);
-                if (!marker && toN == null && fromN != null) {
-                  marker = document.createElement('span');
-                  marker.className = 'move-marker move-down';
-                  marker.textContent = '▼';
-                }
+                let marker = document.createElement('span');
+                marker.className = 'move-marker move-down';
+                marker.textContent = '▼';
                 if (marker) dealTd.appendChild(marker);
 	              dealTd.appendChild(document.createTextNode(r.deal || '-'));
 	              tr.appendChild(dealTd);
