--- a/index.html
+++ b/index.html
@@ -3578,7 +3578,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v1.0.2';
+    const APP_VERSION = 'v1.0.3';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -6814,16 +6814,47 @@
 	        const kpis = document.createElement('div');
 	        kpis.className = 'score-kpis';
 	        const details = filteredMetric.kpi_details || {};
+	        const currentStageMapAll = buildScorecardStageMapFromRows(baseRows, seller, cutoffMonth);
+	        const prevLookupAll = (prevDataset && Array.isArray(prevDataset.all_deals_rows))
+	          ? buildPrevStageLookupForScorecard(prevDataset, seller, cutoffMonth)
+	          : null;
 
-	        // For KPI/funnel tickers: show ▲ added to bucket, ▼ removed from bucket (vs prev).
-	        const countAddsRemoves = (currRows, prevRows) => {
-	          const currSet = new Set((currRows || []).map(scorecardCanonicalKey));
-	          const prevSet = new Set((prevRows || []).map(scorecardCanonicalKey));
-	          let added = 0;
-	          let removed = 0;
-	          currSet.forEach((k) => { if (!prevSet.has(k)) added += 1; });
-	          prevSet.forEach((k) => { if (!currSet.has(k)) removed += 1; });
-	          return { added, removed };
+	        // Match KPI ticker counts to popup logic:
+	        // ▲ = rows that show positive marker in popup main section (new or moved-up-to current row)
+	        // ▼ = rows that show in popup "moved down from this stage" section.
+	        const countPopupAlignedMoves = (currRows, prevRowsBucket) => {
+	          if (!prevLookupAll) return { up: 0, down: 0 };
+	          let up = 0;
+	          const currMap = new Map();
+	          (currRows || []).forEach((r) => {
+	            const k = scorecardCanonicalKey(r);
+	            if (!currMap.has(k)) currMap.set(k, r);
+	          });
+	          currMap.forEach((r) => {
+	            const currentStageN = stageNumber(r.stage);
+	            const keys = scorecardRecordMatchKeys(r);
+	            let prevStageN = null;
+	            for (const k of keys) {
+	              if (prevLookupAll.has(k)) {
+	                prevStageN = pickClosestStageCandidate(prevLookupAll.get(k), currentStageN);
+	                break;
+	              }
+	            }
+	            if (prevStageN == null || (currentStageN != null && currentStageN > prevStageN)) up += 1;
+	          });
+	          let down = 0;
+	          const prevMap = new Map();
+	          (prevRowsBucket || []).forEach((r) => {
+	            const k = scorecardCanonicalKey(r);
+	            if (!prevMap.has(k)) prevMap.set(k, r);
+	          });
+	          prevMap.forEach((r, k) => {
+	            const toStage = currentStageMapAll.get(k);
+	            const fromN = stageNumber(r.stage || '-');
+	            const toN = stageNumber(toStage || '-');
+	            if (fromN != null && toN != null && toN < fromN) down += 1;
+	          });
+	          return { up, down };
 	        };
 
 	        const entries = [
@@ -6848,8 +6879,8 @@
 	          v.className = 'kpi-value';
 	          v.textContent = money.format(currCount || 0);
 		          const prevRowsFiltered = prevDetailsComputed && prevDetailsComputed[detailKey] ? prevDetailsComputed[detailKey] : [];
-		          const diff = countAddsRemoves(currRows || [], prevRowsFiltered || []);
-		          const tick = movementTickersEl(diff.added, diff.removed);
+		          const diff = countPopupAlignedMoves(currRows || [], prevRowsFiltered || []);
+		          const tick = movementTickersEl(diff.up, diff.down);
 	          vRow.appendChild(v);
 	          vRow.appendChild(tick);
 	          box.appendChild(l);
